updated cart controller and cart context
