# packages/shared/src/schemas/cart.schema.ts
@@ -46,10 +46,56 @@ export type AddProductToCartResponse = {
 
 export type getMyCartRequest = {};
 
+// export type getCartResponse = {
+//   cartID: number;
+//   items: CartItem[];
+//   totalPrice: number;
+// };
+
+export type ApiCartItem = {
+  cartItemId: number;
+  quantity: number;
+  productId: number;
+  name: string;
+  genre: string;
+  daw: string;
+  bpm: number;
+  price: number;
+  imgS3Key: string;
+  sellerId: number;
+  sellerUsername: string;
+};
+
+export type ApiCartData = {
+  cartId: number;
+  appUserId: number;
+  items: ApiCartItem[];
+};
+
+// export  type getCartResponse = {
+//   data: ApiCartData;
+//   message: string;
+// };
+
 export type getCartResponse = {
-  cartID: number;
-  items: CartItem[];
-  totalPrice: number;
+  data: {
+    cartId: number;
+    appUserId: number;
+    items: {
+      cartItemId: number;
+      quantity: number;
+      productId: number;
+      name: string;
+      genre: string;
+      daw: string;
+      bpm: number;
+      price: number;
+      imgS3Key: string;
+      sellerId: number;
+      sellerUsername: string;
+    }[];
+  };
+  message: string;
 };
 
 interface UpdateCartItemRequest {
